--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Caleb's Site</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico" />
+  </head>
+  <body>
+    <div class="top-box">
+      <h1>I'm Caleb</h1>
+      <p>I'm a programmer</p>
+    </div>
+    <div class="redbox box"></div>
+    <div class="bluebox box"></div>
+  </body>
+</html>hello
