added text animations

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="icon" href="favicon.ico" />
   </head>
   <body>
-    <div class="top-box">
-      <h1>I'm Caleb</h1>
-      <p>I'm a programmer</p>
+    <div>
+      <a href=""></a>
+      <h1>CALEB FOO</h1>
+      <p class="text-animation"><span class="next"></span><span class="cursor"></span></p>
     </div>
-    <div class="redbox box"></div>
-    <div class="bluebox box"></div>
-  </body>
-</html>hello
+
+</html>
+
