--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <link rel="icon" href="favicon.ico" />
   </head>
   <body>
-    <div>
-      <a href=""></a>
+    <div class="central-text">
+      <img class="profile" src="assets/images/pp1.png"></a>
       <h1>CALEB FOO</h1>
       <p class="text-animation"><span class="next"></span><span class="cursor"></span></p>
+      <a class="button" href="assets/files/Caleb_Resume_2019_new.pdf" download>Resume</a>
+      
+      <a class="button" href="https://github.com/kaypohleb">Github</a>
+      <a class="button" href="https://www.artstation.com/kaleful">Artstation</a>
+      <a class="button" href="https://www.linkedin.com/in/caleb-foo/">Linkedin</a>
     </div>
 
 </html>
