--- a/index.html
+++ b/index.html
@@ -24,15 +24,19 @@
   </head>
   <body>
     <div class="central-text">
-      <img class="profile" src="assets/images/pp1.png"></a>
-      <h1>CALEB FOO</h1>
-      <p>an Information Systems Student at SUTD </p>
+      <table>
+        <tr>
+      <td><img class="profile" src="assets/images/pp1.png" alt="caleb profile picture"></a></td>
+      <td><h1>CALEB FOO</h1>
+      <p class="sub-title">Information Systems Student at SUTD </p>
       <p class="text-animation"><span class="next"></span><span class="cursor"></span></p>
       <a class="button" href="assets/files/Caleb_Resume_2019_new.pdf" download>Resume</a>
       
       <a class="button" href="https://github.com/kaypohleb">Github</a>
       <a class="button" href="https://kaleful.artstation.com/">Artstation</a>
       <a class="button" shref="https://www.linkedin.com/in/caleb-foo/">Linkedin</a>
+      </td></tr>
+      </table>
     </div>
 
 </html>
