--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
     <meta charset="utf-8">
     <title>Caleb's Site</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/mousepos.js"></script>
   </head>
   <body>
-    <div class="central-text">
+    <div id="central-text">
       <table>
         <tr>
-      <td><img class="profile" src="assets/images/pp1.png" alt="caleb profile picture"></a></td>
+      <td><img id="profile" src="assets/images/pp1.png" alt="caleb profile picture"></a></td>
       <td><h1>CALEB FOO</h1>
       <p class="sub-title">Information Systems Student at SUTD </p>
       <p class="text-animation"><span class="next"></span><span class="cursor"></span></p>
@@ -38,6 +39,5 @@
       </td></tr>
       </table>
     </div>
-
 </html>
 
