updated favicon and metadata

--- a/testnewbackground.html
+++ b/testnewbackground.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Caleb Foo</title>
+	<title>Caleb Foo</title>
+	<meta name="description" content="Porfolio of Caleb Foo">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/productsansstyle.css">
 	<link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
