update id for scroll

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 							   1146.361,655.281 1106.741,644.281 1131.879,677.72 	"/>
 						   <circle fill="#FFFFFF" cx="1132.021" cy="689.182" r="2.864"/>
 					   </g>
-					   <g id="Scroll">
+					   <g id="scroll">
 						   <g>
 							   <polygon fill="#2A1447" points="664.499,560.5 667.077,539.5 600.695,539.5 602.899,560.5 		"/>
 						   </g>
