added https to fix mixed content warning

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 			<div class="letter">
 				<h1>Contact Me!</h1>
 				<div class="form-wrapper">
-				<form action="mailto:kaleb.is.caleb@gmail.com" method="post" enctype="text/plain">
+				<form action="https://mailto:kaleb.is.caleb@gmail.com" method="post" enctype="text/plain">
 				<label for="name">Name</label>
 				<br>
 				<input type="text" name="name" id="name" placeholder="Your Name">
